text fix for module 5
corrected markdown to show regular dollar signs in 05_modeling.ipynb

--- a/Notebooks/05_modeling.ipynb
+++ b/Notebooks/05_modeling.ipynb
@@ -1775,30 +1775,31 @@
    "source": [
     "**A: 1** Your answer here:    \n",
     "We refit our model to use all data except the data available for Big Mountain. i.e., we excluded Big Mountain data from the model to train it entirely on data from other resorts.\n",
-    "The Big Mountain AdultWeekend Ticket price was $81\n",
-    "The expected Big Mountain AdultWeekend ticket price using the model was $97.96\n",
-    "This suggests that without any changes to the facilities a price increase to $97.96 will be on par with other resorts in the nationwide market if the information used in the model is complete enough to predict accurately. However, The current price of $81 is among the highest in the state of Montana, where Big Mountain is located. \n",
+    "The Big Mountain AdultWeekend Ticket price was \\\\$81\n",
+    "The expected Big Mountain AdultWeekend ticket price using the model was \\\\$97.96\n",
+    "This suggests that without any changes to the facilities a price increase to \\\\$97.96 will be on par with other resorts in the nationwide market if the information used in the model is complete enough to predict accurately. However, The current price of \\\\$81 is among the highest in the state of Montana, where Big Mountain is located. \n",
     "\n",
     "The model was used to consider options for facility changes on the basis that each visitor averaged 5 ticket purchases per season.\n",
     "Options under consideration were as follows:\n",
     "\n",
     "1) Permanently closing down up to 10 of the least used runs without changing anything else in the resort.\n",
     "\n",
-    "The result was that closing one made the least difference in ticket price ( $0.50 ticket price reduction), and just over $1.5 million reduction in seasonal revenue. Closing 2 runs reduced ticket prices (by about $1.20) and revenue (by over $2 million per season). This was exacerbated if 3 runs were closed, but there was no difference in the effect of closing 3, 4 or 5 runs (close to $1.50 ticket price reduction and $2.5 million revenue reduction). Closing 6 runs further reduced ticket prices and revenue dramatically, but there was no difference in the effect of closing 6, 7  or 8 runs (about $2.20 ticket price reduction and $3.9 million revenue loss) . Closing 9 or 10 runs reduced ticket prices and revenue further than closing 8 runs, and to the same degree.\n",
+    "The result was that closing one made the least difference in ticket price ( \\\\$0.50 ticket price reduction), and just over \\\\$1.5 million reduction in seasonal revenue. Closing 2 runs reduced ticket prices (by about \\\\$1.20) and revenue (by over \\\\$2 million per season). This was exacerbated if 3 runs were closed, but there was no difference in the effect of closing 3, 4 or 5 runs (close to \\\\$1.50 ticket price reduction and \\\\$2.5 million revenue reduction). Closing 6 runs further reduced ticket prices and revenue dramatically, but there was no difference in the effect of closing 6, 7  or 8 runs (about \\\\$2.20 ticket price reduction and \\\\$3.9 million revenue loss) . Closing 9 or 10 runs reduced ticket prices and revenue further than closing 8 runs, and to the same degree.\n",
     "\n",
     "2) Increase the vertical drop by adding a run to a point 150 feet lower down but requiring the installation of an additional chair lift to bring skiers back up, without additional snow making coverage\n",
     "\n",
-    "The result was that this scenario increased support for ticket prices by $2.22 and projected a season revenue of $3,888,889\n",
+    "The result was that this scenario increased support for ticket prices by \\\\$2.22 and projected a season revenue of \\\\$3,888,889\n",
     "\n",
     "3) Same as number 2, but adding 2 acres of snow making cover.\n",
-    "Scenario 3 increased support for ticket prices by $1.99 with projected seasonal revenue of $3,474,639\n",
+    "Scenario 3 increased support for ticket prices by \\\\$1.99 with projected seasonal revenue of \\\\$3,474,639\n",
     "\n",
     "4) Increase the longest run by 0.2 mile to boast 3.5 miles length, requiring an additional snow making coverage of 4 acres.\n",
     "This scenario produced no expected changes in ticket prices or revenue.\n",
     "\n",
     "\n",
     "\n",
-    "To test the predictive strength of the model, Big Mountain could try one of the scenarios tested depending on the cost of making necessary changes. Option 1 (closing the least used runs) appear to require the least overhead. It would be helpful to know the operating costs of each run, to know if savings from  not operating the run might offset revenue loss.  \n"
+    "To test the predictive strength of the model, Big Mountain could try one of the scenarios tested depending on the cost of making necessary changes. Option 1 (closing the least used runs) appear to require the least overhead. It would be helpful to know the operating costs of each run, to know if savings from  not operating the run might offset revenue loss.  \n",
+    "\n"
    ]
   },
   {
